# objets_metier_rs

./: CHANGELOG.md  CHANGELOG_v0.1.3.md  Cargo.toml  DOCUMENTATION_INDEX.md  GUIDE_UTILISATION_v0.1.3.md  README.md  RELEASE_NOTES_v0.1.3.md  sage_analyzer_log.txt
docs/: GUIDE_UTILISATION.md  VARIANT_RESEARCH.md
examples/: elegant_syntax.rs  recursive_analyzer.rs  sage_connection_demo.rs
src/: lib.rs  main.rs  main_backup.rs  main_simple.rs  main_test.rs
src/com/: dispatch.rs  instance.rs  mod.rs  safe_string.rs  variant.rs
src/docs/: GUIDE_UTILISATION.md
src/errors/: mod.rs  sage_error.rs
src/wrappers/: cial_application_wrapper.rs  cpta_application_wrapper.rs  cpta_loggable_wrapper.rs  factory_journal_wrapper.rs  loggable_wrapper.rs  mod.rs
