[package]
name = "objets_metier_rs"
version = "0.1.2"
edition = "2024"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Com",
    "Win32_System_Ole", 
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_Variant"
]}
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }